Corrected inconsistent styles and customized scrollbar.

--- a/src/components/UI/independent/Toast/Toast.module.css
+++ b/src/components/UI/independent/Toast/Toast.module.css
@@ -35,6 +35,7 @@
   border-radius: var(--border-radius-vw);
   transform: rotate(45deg);
   background-color: var(--primary-1);
+  cursor: pointer;
 }
 
 .Toggler::after {
