--- a/src/components/layout/Appbar/AppbarLink/AppbarLink.module.css
+++ b/src/components/layout/Appbar/AppbarLink/AppbarLink.module.css
@@ -14,6 +14,7 @@
   letter-spacing: var(--letter-spacing-vw);
   cursor: pointer;
   outline: none;
+  transition: var(--generic-transition);
 }
 
 .Active,
