--- a/src/components/layout/Appbar/AppbarRoot/AppbarRoot.module.css
+++ b/src/components/layout/Appbar/AppbarRoot/AppbarRoot.module.css
@@ -17,8 +17,7 @@
 
 .Content {
   /* wrapper for Home icon, search bar, and children (links and sections) */
-  width: 100%;
   height: 100%;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 /* end all devices landscape */
