--- a/src/components/layout/Appbar/AppbarSection/AppbarSection.module.css
+++ b/src/components/layout/Appbar/AppbarSection/AppbarSection.module.css
@@ -38,7 +38,6 @@
   transform: scale(0) translateY(-100%);
   transition: all 250ms ease-in-out;
   max-height: 0;
-  overflow: hidden;
 }
 
 .ShowContent {
